# core-hello-world

./: .hgignore  .merlin  LICENSE  PREREQUISITES.md  README.md  broker.ml  broker_client.ml  broker_protocol.ml  broker_protocol.mli  broker_server.ml  build.sh  build_all.sh  client.ml  common.ml  common.mli  directory.ml  directory.mli  dot_ocamlinit  hello_client.ml  hello_core.opam  hello_protocol.ml  hello_protocol.mli  hello_server.ml  hello_world.ml  jbuild
broker/: broker_client.ml  broker_protocol.ml  broker_server.ml  build.sh  common.ml  directory.ml  jbuild
hello-world/: build.sh  hello_world.ml  jbuild
hello-world-rpc/: build.sh  common.ml  common.mli  hello_client.ml  hello_protocol.ml  hello_server.ml  hello_server.mli  jbuild
src/: broker_protocol.mli  build.sh  directory.ml  hello_core.opam  hello_protocol.ml  hello_world.ml  hello_world.mli  jbuild
workshop/: notes.org  open_vs_include.ml  part_I.org  part_II.org
workshop/async/: MANIFEST  build_all.sh  manifest.ml  pipe_manifest.ml  simple.ml  time_loop.ml
workshop/count-lines-1/: main.ml
workshop/count-lines-2/: counter.ml  counter.mli  main.ml
workshop/hello-world/: main.ml
